# csrestructuredquery

./: .flake8  README.md  pyproject.toml
.github/workflows/: autotest.yml  codelint.yml  codestyle.yml  flake8.yml  pythonapp.yml  test.yml
csrestructuredquery/: query.py  typing.py
tests/: test_csrestructuredquery.py  test_query.py
